[skip ci] J8 Patches